src/pj/poco/test/neg/NAMPER01.POC
/* Tests for some wierdly placed ampersands */
#pragma poco echo "expect>trying to take address of non-variable"

main()
{
int i;
int *pt;
int **ppt;

pt = &i;
ppt = &(&i);
puts("This shouldn't compile");
}
